# mflex

./: .gitignore  README.md  pyproject.toml  test.ipynb  test_msat.ipynb
mflex/classes/: clsmod.py
mflex/evaluate/: metrics.py
mflex/load/: read_file.py
mflex/model/: field3d.py  plasma_parameters.py  (+1 more)
mhsflex/: 2024_cme_magnetograms.ipynb  2024_cme_xray.ipynb  AvrettLoeser.ipynb  ESPMposter.ipynb  LL90.ipynb  Magfield.py  SDO.ipynb  SOAR.ipynb  b3d.py  bfieldmodel.py  calculate_Lorentz_force.ipynb  calculate_Phi.ipynb  calculate_current_density.ipynb  calculate_fieldlines.ipynb  calculate_numerical_efficiency.ipynb  calculate_plasma_density.ipynb  calculate_plasma_pressure.ipynb  colortest.ipynb  ff.py  field.py  field2d.py  field3d.py  fieldvis.py  fluxbalance.py  issiRMHD.ipynb  issiSA.ipynb  issiSA_fb.ipynb  issiSA_test.ipynb  issibern.ipynb  metrics.py  paper_A1_SDO.ipynb  paper_A1_multipol.ipynb  performance_fieldlines.ipynb  performance_pp.ipynb  plasmaparameters.py  poloidal.py  pp.py  pythonperformance.ipynb  read.py  switch.py  (+15 more)
msat/: .gitignore
notebooks/: movie.ipynb  paper.ipynb  phd_thesis_3sol_comp_plots.ipynb  phd_thesis_VonMises_example.ipynb  phd_thesis_logcomp.ipynb  phd_thesis_phi_plots.ipynb  phd_thesis_seehafer_ex.ipynb  recreate_nw2019.ipynb  retrieve.ipynb  retrieve_paper.ipynb  seminar_issi_analytical.ipynb  seminar_issi_rmhd.ipynb  test.ipynb  test2.ipynb  test_bpressure.ipynb  test_colors.ipynb  test_issi_analytical2.ipynb  test_issi_rmhd.ipynb  test_msat.ipynb  test_plots.ipynb  test_soar.ipynb  test_soar_initial.ipynb  test_timing.ipynb
(+13 files in other folders)
