[tool.poetry]
name = "mflex"
version = "0.1.0"
description = ""
authors = ["Lilli Nadol <lmn6@st-andrews.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scipy = "^1.13.0"
matplotlib = "^3.9.0"
astropy = "^6.1.0"
numba = "^0.59.1"
sunpy = "^5.1.3"
ipykernel = "^6.29.4"
requests = "^2.32.2"
bs4 = "^0.0.2"
lxml = "^5.2.2"
zeep = "^4.2.1"
drms = "^0.7.1"
parfive = "^2.1.0"
mayavi = "^4.8.2"
configobj = "^5.0.8"
pyqt5 = "^5.15.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
